chore: update CLI package versions to 3.11.0
This commit updates the version of all CLI-related packages from "0.0.0-dev" to "3.11.0", ensuring consistency across the better-webhook CLI binaries for various platforms including darwin, linux, and windows.

--- a/packages/cli-darwin-arm64/package.json
+++ b/packages/cli-darwin-arm64/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@better-webhook/cli-darwin-arm64",
-  "version": "0.0.0-dev",
+  "version": "3.11.0",
   "description": "darwin arm64 native binary for the better-webhook CLI.",
   "os": [
     "darwin"
