--- a/packages/cli-linux-arm64/package.json
+++ b/packages/cli-linux-arm64/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@better-webhook/cli-linux-arm64",
-  "version": "0.0.0-dev",
+  "version": "3.11.0",
   "description": "linux arm64 native binary for the better-webhook CLI.",
   "os": [
     "linux"
