--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@better-webhook/cli",
-  "version": "0.0.0-dev",
+  "version": "3.11.0",
   "description": "Native binary wrapper for the better-webhook CLI.",
   "bin": {
     "better-webhook": "bin/better-webhook.cjs"
