chore: update GoReleaser configuration and CLI documentation
This commit modifies the GoReleaser configuration to streamline the build process for the better-webhook CLI, including changes to the binary naming template and the addition of Homebrew Cask support. It also updates the documentation to reflect the new installation methods and removes deprecated npm wrapper packages, ensuring clarity and consistency in the CLI installation process.

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,13 +7,5 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": [
-    "@better-webhook/cli",
-    "@better-webhook/cli-go",
-    "@better-webhook/cli-darwin-arm64",
-    "@better-webhook/cli-darwin-x64",
-    "@better-webhook/cli-linux-arm64",
-    "@better-webhook/cli-linux-x64",
-    "@better-webhook/cli-windows-x64"
-  ]
+  "ignore": []
 }
