--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -4,7 +4,8 @@ project_name: better-webhook
 
 builds:
   - id: better-webhook
-    main: ./apps/webhook-cli/cmd/better-webhook
+    dir: ./apps/webhook-cli
+    main: ./cmd/better-webhook
     binary: better-webhook
     env:
       - CGO_ENABLED=0
@@ -25,15 +26,58 @@ builds:
         goarch: arm64
 
 archives:
-  - id: binaries
+  - id: cli-archives
     ids:
       - better-webhook
-    formats:
-      - binary
-    name_template: '{{ .Binary }}-{{ .Os }}-{{ if eq .Arch "amd64" }}x64{{ else }}{{ .Arch }}{{ end }}{{ .Ext }}'
+    formats: [tar.gz]
+    format_overrides:
+      - goos: windows
+        formats: [zip]
+    wrap_in_directory: false
+    name_template: >-
+      {{ .Binary }}-{{ .Os }}-{{ if eq .Arch "amd64" }}x64{{ else }}{{ .Arch }}{{ end }}
 
 checksum:
   name_template: checksums.txt
+
+sboms:
+  - artifacts: archive
+    ids:
+      - cli-archives
+
+signs:
+  - cmd: cosign
+    signature: "${artifact}.sigstore.json"
+    args:
+      - sign-blob
+      - --yes
+      - --bundle=${signature}
+      - ${artifact}
+    artifacts: checksum
+
+homebrew_casks:
+  - name: better-webhook
+    ids:
+      - cli-archives
+    binaries:
+      - better-webhook
+    directory: Casks
+    repository:
+      owner: endalk200
+      name: homebrew-tap
+      branch: main
+      token: "{{ .Env.HOMEBREW_TAP_TOKEN }}"
+      pull_request:
+        enabled: true
+        base:
+          owner: endalk200
+          name: homebrew-tap
+          branch: main
+    homepage: https://github.com/endalk200/better-webhook
+    description: Modern CLI for developing and testing webhooks
+    license: MIT
+    commit_msg_template: "chore: update better-webhook cask to {{ .Tag }}"
+    skip_upload: auto
 
 changelog:
   sort: asc
