--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -1,4 +1,4 @@
-name: Release CLI Binary
+name: Release CLI
 
 on:
   push:
@@ -9,222 +9,53 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: false
 
+permissions:
+  contents: write
+  id-token: write
+
 jobs:
-  validate-tag:
-    name: Validate release tag
-    runs-on: ubuntu-latest
-    outputs:
-      tag: ${{ steps.validate.outputs.tag }}
-      version: ${{ steps.validate.outputs.version }}
-    steps:
-      - name: Validate semantic version tag
-        id: validate
-        env:
-          TAG: ${{ github.ref_name }}
-        run: |
-          set -euo pipefail
-          if ! [[ "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+(-[0-9A-Za-z.-]+)?$ ]]; then
-            echo "Invalid release tag '$TAG'. Expected vMAJOR.MINOR.PATCH or prerelease semver tag."
-            exit 1
-          fi
-
-          {
-            echo "tag=$TAG"
-            echo "version=${TAG#v}"
-          } >> "$GITHUB_OUTPUT"
-
-  test-cli:
-    name: Test CLI
-    runs-on: ubuntu-latest
-    needs: validate-tag
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up Go
-        uses: actions/setup-go@v6.2.0
-        with:
-          go-version-file: apps/webhook-cli/go.mod
-          cache-dependency-path: apps/webhook-cli/go.sum
-
-      - name: Run CLI tests
-        working-directory: apps/webhook-cli
-        run: go test ./...
-
   release-cli:
-    name: Build and publish binaries
+    name: Build and release CLI
     runs-on: ubuntu-latest
-    needs: [validate-tag, test-cli]
-    permissions:
-      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Set up Go
-        uses: actions/setup-go@v6.2.0
+      - name: Setup Go
+        uses: actions/setup-go@v6
         with:
           go-version-file: apps/webhook-cli/go.mod
-          cache-dependency-path: apps/webhook-cli/go.sum
+
+      - name: Setup Devbox
+        uses: ./.github/actions/setup-devbox
+
+      - name: Format check
+        run: devbox run -- just format-check
+
+      - name: Lint
+        run: devbox run -- just lint
+
+      - name: Test
+        run: devbox run -- just test
+
+      - name: Build
+        run: devbox run -- just build
+
+      - name: Install Syft
+        uses: anchore/sbom-action/download-syft@v0
+
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v3
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v7
         with:
           distribution: goreleaser
           version: "~> v2"
-          args: release --clean --config .goreleaser.yaml
+          args: release --clean
         env:
+          GORELEASER_CURRENT_TAG: ${{ github.ref_name }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  update-homebrew-tap:
-    name: Open Homebrew tap update PR
-    runs-on: ubuntu-latest
-    needs: [validate-tag, release-cli]
-    permissions:
-      contents: read
-    steps:
-      - name: Update formula in homebrew-tap
-        env:
-          TAG: ${{ needs.validate-tag.outputs.tag }}
-          VERSION: ${{ needs.validate-tag.outputs.version }}
-          SOURCE_GITHUB_TOKEN: ${{ github.token }}
-          TAP_GITHUB_TOKEN: ${{ secrets.TAP_GITHUB_TOKEN }}
-          SOURCE_REPO: ${{ github.repository }}
-        run: |
-          set -euo pipefail
-          if [ -z "${TAP_GITHUB_TOKEN:-}" ]; then
-            echo "Missing TAP_GITHUB_TOKEN secret."
-            exit 1
-          fi
-
-          workdir="$(mktemp -d)"
-          trap 'rm -rf "$workdir"' EXIT
-
-          GH_TOKEN="${SOURCE_GITHUB_TOKEN}" gh release download "$TAG" \
-            --repo "$SOURCE_REPO" \
-            --pattern "checksums.txt" \
-            --dir "$workdir" \
-            --clobber
-
-          darwin_arm64="$(awk '/better-webhook-darwin-arm64$/ { print $1 }' "$workdir/checksums.txt")"
-          darwin_x64="$(awk '/better-webhook-darwin-x64$/ { print $1 }' "$workdir/checksums.txt")"
-          linux_arm64="$(awk '/better-webhook-linux-arm64$/ { print $1 }' "$workdir/checksums.txt")"
-          linux_x64="$(awk '/better-webhook-linux-x64$/ { print $1 }' "$workdir/checksums.txt")"
-
-          for hash in "$darwin_arm64" "$darwin_x64" "$linux_arm64" "$linux_x64"; do
-            if [ -z "$hash" ]; then
-              echo "Missing hash in checksums.txt."
-              exit 1
-            fi
-          done
-
-          git clone "https://x-access-token:${TAP_GITHUB_TOKEN}@github.com/endalk200/homebrew-tap.git" "$workdir/homebrew-tap"
-          cd "$workdir/homebrew-tap"
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-          branch="update-better-webhook-${VERSION}"
-          if git ls-remote --exit-code --heads origin "$branch" >/dev/null 2>&1; then
-            git checkout -B "$branch" "origin/$branch"
-          else
-            git checkout -B "$branch" "origin/main"
-          fi
-
-          cat > Formula/better-webhook.rb << 'FORMULA_EOF'
-          # typed: false
-          # frozen_string_literal: true
-
-          # Homebrew formula for better-webhook CLI
-          # Auto-updated by better-webhook release workflow
-          class BetterWebhook < Formula
-            desc "Modern CLI for developing and testing webhooks"
-            homepage "https://github.com/endalk200/better-webhook"
-            version "VERSION_PLACEHOLDER"
-            license "MIT"
-
-            on_macos do
-              on_arm do
-                url "https://github.com/endalk200/better-webhook/releases/download/v#{version}/better-webhook-darwin-arm64"
-                sha256 "DARWIN_ARM64_PLACEHOLDER"
-              end
-              on_intel do
-                url "https://github.com/endalk200/better-webhook/releases/download/v#{version}/better-webhook-darwin-x64"
-                sha256 "DARWIN_X64_PLACEHOLDER"
-              end
-            end
-
-            on_linux do
-              on_arm do
-                url "https://github.com/endalk200/better-webhook/releases/download/v#{version}/better-webhook-linux-arm64"
-                sha256 "LINUX_ARM64_PLACEHOLDER"
-              end
-              on_intel do
-                url "https://github.com/endalk200/better-webhook/releases/download/v#{version}/better-webhook-linux-x64"
-                sha256 "LINUX_X64_PLACEHOLDER"
-              end
-            end
-
-            def install
-              bin.install Dir["*"].first => "better-webhook"
-            end
-
-            test do
-              assert_match version.to_s, shell_output("#{bin}/better-webhook --version")
-            end
-          end
-          FORMULA_EOF
-
-          sed -i "s/VERSION_PLACEHOLDER/${VERSION}/g" Formula/better-webhook.rb
-          sed -i "s/DARWIN_ARM64_PLACEHOLDER/${darwin_arm64}/g" Formula/better-webhook.rb
-          sed -i "s/DARWIN_X64_PLACEHOLDER/${darwin_x64}/g" Formula/better-webhook.rb
-          sed -i "s/LINUX_ARM64_PLACEHOLDER/${linux_arm64}/g" Formula/better-webhook.rb
-          sed -i "s/LINUX_X64_PLACEHOLDER/${linux_x64}/g" Formula/better-webhook.rb
-
-          if git diff --quiet Formula/better-webhook.rb; then
-            echo "Formula already up to date."
-            exit 0
-          fi
-
-          git add Formula/better-webhook.rb
-          git commit -m "Update better-webhook to ${VERSION}"
-          git push -u origin "$branch"
-
-          existing_pr_number="$(GH_TOKEN="${TAP_GITHUB_TOKEN}" gh pr list --repo endalk200/homebrew-tap --head "$branch" --json number --jq '.[0].number // empty')"
-          if [ -z "$existing_pr_number" ]; then
-            GH_TOKEN="${TAP_GITHUB_TOKEN}" gh pr create \
-              --repo endalk200/homebrew-tap \
-              --title "Update better-webhook to ${VERSION}" \
-              --body "Automated update of better-webhook formula to ${VERSION} from ${TAG}."
-          else
-            echo "PR #${existing_pr_number} for branch $branch already exists."
-          fi
-
-  companion-module-tag:
-    name: Ensure companion Go module tag
-    runs-on: ubuntu-latest
-    needs: [validate-tag, release-cli]
-    permissions:
-      contents: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Create companion module tag if missing
-        env:
-          TAG: ${{ needs.validate-tag.outputs.tag }}
-        run: |
-          set -euo pipefail
-          MODULE_TAG="apps/webhook-cli/${TAG}"
-          if git rev-parse --verify "refs/tags/${MODULE_TAG}" >/dev/null 2>&1; then
-            echo "Module tag ${MODULE_TAG} already exists."
-            exit 0
-          fi
-
-          git tag "${MODULE_TAG}" "${GITHUB_SHA}"
-          git push origin "refs/tags/${MODULE_TAG}"
+          HOMEBREW_TAP_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
