chore: add dependency installation step to release workflow
This commit introduces a new step in the GitHub Actions release workflow to install dependencies using Devbox before running the format check. This ensures that all necessary dependencies are available for the subsequent steps in the workflow.

--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Setup Devbox
         uses: ./.github/actions/setup-devbox
 
+      - name: Install dependencies
+        run: devbox run -- just ci-install
+
       - name: Format check
         run: devbox run -- just format-check
 
