chore: enhance documentation and improve code quality checks
This commit introduces a new quality check script in the package.json for the documentation app, ensuring linting and quality checks are performed together. It also updates the README to include instructions for running these checks. Additionally, several components in the documentation have been refined for clarity, including updates to the HomePage layout, feature descriptions, and the addition of new sections for contributing and FAQs. The GCP Functions adapter documentation has been added, along with improvements to existing SDK and CLI documentation for better usability and understanding.

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "types:check": "fumadocs-mdx && next typegen && tsc --noEmit",
     "postinstall": "fumadocs-mdx",
-    "lint": "eslint ."
+    "quality:check": "node ./scripts/docs-quality-check.mjs",
+    "lint": "eslint . && pnpm run quality:check"
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
