chore: configure npm registry authentication in release workflow
This commit adds a step to the release workflow for configuring npm registry authentication using the `actions/setup-node` action. It sets the `NODE_AUTH_TOKEN` environment variable to securely authenticate with the npm registry during dependency installation. These changes enhance the workflow's ability to manage package installations effectively.

--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -31,8 +31,15 @@ jobs:
       - name: Setup Devbox
         uses: ./.github/actions/setup-devbox
 
+      - name: Configure npm registry auth
+        uses: actions/setup-node@v4
+        with:
+          registry-url: "https://registry.npmjs.org"
+
       - name: Install dependencies
         run: devbox run -- just ci-install
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN || secrets.NODE_AUTH_TOKEN }}
 
       - name: Format check
         run: devbox run -- just format-check
